# PloxEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
PloxEngine/: CMakeLists.txt
PloxEngine/src/: test.cpp  test.h
PloxEngine/src/core/: Assert.h  Engine.cpp  Engine.h  Event.h  GameLogic.h  Logger.cpp  Logger.h
PloxEngine/src/input/: Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
PloxEngine/src/platform/: FileSystem_Win32.cpp  Platform.h  Platform_Win32.cpp  Platform_Win32.h
PloxEngine/src/platform/filesystem/: FileSystem.h  Path.cpp  Path.h
PloxEngine/src/platform/window/: Window.cpp  Window.h
PloxEngine/src/rendering/: GraphicsAdapter.cpp  GraphicsAdapter.h  RenderUtilities.cpp  RenderUtilities.h  Renderer.cpp  Renderer.h  ResourceViewRegistry.cpp  ResourceViewRegistry.h
PloxEngine/src/rendering/pass/: CubePass.cpp  CubePass.h
PloxEngine/src/rendering/rendergraph/: CommandFramePool.cpp  CommandFramePool.h  Registry.cpp  Registry.h  RenderGraph.cpp  RenderGraph.h  ViewHandles.h
PloxEngine/src/rendering/renderview/: RenderView.cpp  RenderView.h  RenderViewData.h
PloxEngine/src/rendering/types/: Barrier.h  Buffer.h  BufferView.h  Command.h  CommandList.h  CommandPool.h  DescriptorSet.h  Extent2D.h  Format.h  GraphicsPipeline.h  Image.h  ImageView.h  Queue.h  Sampler.h  Semaphore.h  Swapchain.h
PloxEngine/src/rendering/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanCommandPool.cpp  VulkanImage.cpp  (+32 more)
PloxEngine/src/utility/: Enum.h  HandleManager.cpp  HandleManager.h  ObjectPool.h  SpinLock.cpp  SpinLock.h  Utilities.cpp  Utilities.h
PloxEngine/src/window/: Window.cpp  Window.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: grid_ps.spv  grid_vs.spv
Sandbox/src/: main.cpp
(+17 files in other folders)
